[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/hud/hud.png" type="Texture" id=1]
[ext_resource path="res://sprites/hud/hud_players.png" type="Texture" id=2]
[ext_resource path="res://objects/hud/Hud.gd" type="Script" id=3]
[ext_resource path="res://objects/hud/HudRevolver.tscn" type="PackedScene" id=4]

[node name="Hud" type="Node2D"]
z_index = 102
z_as_relative = false
script = ExtResource( 3 )

[node name="TMP" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 300, 0, 300, 100, 0, 100 )

[node name="FaceBg" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 16, 0, 48, 0, 48, 32, 16, 32 )

[node name="FaceSprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 6

[node name="HpBarBg" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 17, 32, 111, 32, 111, 39, 17, 39 )

[node name="HpBar" type="Polygon2D" parent="."]
position = Vector2( 17, 32 )
polygon = PoolVector2Array( 0, 0, 94, 0, 94, 7, 0, 7 )

[node name="HudSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="HudRevolver" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 66, 14 )
